# Onoma

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  FILETREE.md  README.md  pyproject.toml  requirements.txt
src/onomatool/: cli.py  config.py  file_dispatcher.py  llm_integration.py  prompts.py  renamer.py
src/onomatool/processors/: markitdown_processor.py  text_processor.py
tests/: mock_config.toml  test_config.py  test_conflict_resolver.py  test_file_collector.py  test_file_dispatcher.py  test_renamer.py  test_text_processor.py  test_usage_enduser.py
