[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "onomatool"
version = "0.1.0"
description = "AI-powered file renaming tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markitdown",
    "openai",
    "google-generativeai",
    "tomli",
    "toml",
]

[project.scripts]
onomatool = "onomatool.cli:main"

[tool.ruff]
line-length = 88
exclude = [".venv", "venv", "migrations"]
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["onomatool"]
known-third-party = ["cairosvg", "PIL", "fitz", "pptx", "toml"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"